--- a/web/templates/nav.html
+++ b/web/templates/nav.html
@@ -15,6 +15,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/config">Config</a>
                 </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="/schedule">Schedule</a>
+                </li> -->
             </ul>
         </div>
     </div>
