redid nav menu and broke up ollama, webhooks, and added schedule

--- a/web/templates/nav.html
+++ b/web/templates/nav.html
@@ -13,11 +13,14 @@
                         <span class="visually-hidden">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/config">Config</a>
+                    <a class="nav-link" href="/config/webhooks">Manage Webhooks</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="/schedule">Schedule</a>
-                </li> -->
+                <li class="nav-item">
+                    <a class="nav-link" href="/config/ollama">Manage Ollama</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/config/schedule">Schedule</a>
+                </li>
             </ul>
         </div>
     </div>
