--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -12,7 +12,7 @@
     {% include 'nav.html' %}
 
     <div class="container">
-        <h1>DEV TESTING!!! All Documents</h1>
+        <h1>All Documents</h1>
         {% for doc in docs %}
         <p class="d-inline-flex gap-1">
             <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
