--- a/web/templates/nav.html
+++ b/web/templates/nav.html
@@ -13,10 +13,10 @@
                         <span class="visually-hidden">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/config/webhooks">Manage Webhooks</a>
+                    <a class="nav-link" href="/config/webhooks">Webhooks</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/config/ollama">Manage Ollama</a>
+                    <a class="nav-link" href="/config/ollama">Ollama</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/config/schedule">Schedule</a>
