--- a/web/templates/nav.html
+++ b/web/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
+<nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
     <div class="container">
         <a class="navbar-brand" href="/">FIA Document Send and Summarize</a>
         <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
@@ -20,6 +20,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/config/schedule">Schedule</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/config/documents">Documents</a>
                 </li>
             </ul>
         </div>
