--- a/web/templates/webhooks.html
+++ b/web/templates/webhooks.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% include 'libs.html' %}
-    <title>Config - FIA Doc Manager</title>
+    <title>Webhooks - FIA Doc Manager</title>
 </head>
 
 <body>
