Integrated user defined keywords into document processing. This also allows for the possibility for all documents to be sent

--- a/web/templates/document.html
+++ b/web/templates/document.html
@@ -64,7 +64,7 @@
                       </div>
                 </div>
                 <br>
-                <div class="row">
+                <div class="row mb-2">
                     <div class="col-1">
                         <label for="dt-url" class="form-label"></label>
                         <button type="submit" class="btn btn-primary">Update</button>
