Adjusted send message function to eventually allow images. Fixed bug that would send all documents and not filtered docs

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -34,6 +34,8 @@
                 console.log(data)
                 status.innerHTML = '<span class="badge text-bg-success">Sent</span>';
                 dateElm.innerHTML = `${data.sent_date}`;
+            }else{
+                status.innerHTML = '<span class="badge text-bg-danger">Error</span>';
             }
         });
 
