Added ability to update ollama prompt

--- a/web/templates/nav.html
+++ b/web/templates/nav.html
@@ -16,7 +16,7 @@
                     <a class="nav-link" href="/config/webhooks">Webhooks</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/config/ollama">Ollama</a>
+                    <a class="nav-link" href="/config/ollama">Ollama/Prompts</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/config/schedule">Schedule</a>
