--- a/web/templates/ollama.html
+++ b/web/templates/ollama.html
@@ -30,7 +30,7 @@
         });
 
         socket.on('send_sys_prompt', (data)=>{
-            sys_status = document.getElementById("")
+            sys_status = document.getElementById("sys_status")
             if(data){
                 sys_status.innerHTML = "<span class='badge text-bg-success'>Updated</span>"
             }else{
@@ -45,7 +45,7 @@
             socket.emit('ollama_url_form', url);
         }
         function update_system_prompt(){
-            sys_prompt = document.getElementById("system_prompt").value;
+            sys_prompt = document.getElementById("system_prompt_form").value;
             socket.emit('update_sys_prompt', sys_prompt);
         }
     </script>
@@ -96,14 +96,20 @@
     <hr>
     <div class="container" id="prompts">
         <h2>Prompts Management</h2>
-        <h5>System Prompt <span id="sys_status"></span></h5>
-        <p>Note: place [doc_data] where you would like the PDF data to be inserted in the prompt</p>
-        <div class="form-floating">
-            <textarea class="form-control" placeholder="system_prompt" id="system_prompt" style="height: 150px">{{system_prompt[2]}}</textarea>
-            <button class="btn btn-primary my-2" type="button" onclick="update_system_prompt()">Update</button>
-          </div>
-        <h5>Webhook Prompt</h5>
-        <h5>Doc Type Prompt</h5>
+        <div id="system_prompt">
+            <div>
+                <h5>System Prompt </h5>
+                <span id="sys_status"></span>
+            </div>
+            <p>System Prompt will be the prompt that is defaulted to all webhooks. Note: place [doc_data] where you would like the PDF data to be inserted in the prompt</p>
+            <div class="form-floating">
+                <textarea class="form-control" placeholder="system_prompt" id="system_prompt_form" style="height: 150px">{{system_prompt[2]}}</textarea>
+                <button class="btn btn-primary my-2" type="button" onclick="update_system_prompt()">Update</button>
+            </div>
+        </div>
+        <div id="custom_prompts">
+            <form></form>
+        </div>
     </div>
 </body>
 
