--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -59,61 +59,71 @@
     
     <div class="container">
         <h1>All Documents</h1>
-        {% for doc in docs %}
-        <div class="collapse show" id="collapseElm{{loop.index}}">
-            <div class="card card-body">
-                <h2><a class="button btn-primary" href="{{doc.document_link}}" target="_blank">{{doc.document_name}}</a></h2>
-                <p>Document Date - {{doc.document_date}}</p>
-                <div class="table-responsive">
-                    <table class="table table-primary">
-                        <thead>
-                            <tr>
-                                <th scope="col">Webhook Name</th>
-                                <th scope="col">Actions</th>
-                                <th scope="col">Date Updated</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {%for wh in doc.webhooks%}
-
-                                <tr>
-                                    <td>
-                                        {{wh.webhook_name}}
-                                        <span id="status-{{wh.send_id}}">
-                                        {%if wh.skip == 1%}
-                                            <span class="badge text-bg-primary">Skipped Send</span>
-                                        {%elif wh.sent == 1%}
-                                            <span class="badge text-bg-success">Sent</span>
-                                        {%else%}
-                                            <span class="badge text-bg-warning">Pending</span>
-                                        {%endif%}
-                                        </span> 
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-primary" onclick="sendDocument({{wh.send_id}})">Send</button>
-                                        <span id="actionbutton-{{wh.send_id}}">
-                                            {%if wh.skip == 1 or wh.sent == 1%}
-                                                <button class="btn btn-warning" onclick="queueDocument({{wh.send_id}})">Queue</button>
-                                            {%elif wh.skip == 0 or wh.sent == 0%}
-                                                <button class="btn btn-danger" onclick="cancelQueueDocument({{wh.send_id}})">Cancel</button>
-                                            {%endif%}
-                                        </span>
-                                        
-                                    </td>
-                                    <td>
-                                        <span id="sentdate-{{wh.send_id}}">{{wh.send_date}}</span>
-                                    </td>
-                                </tr>
-                            {%endfor%}
-                        </tbody>
-                    </table>
+        {% if only_docs %}
+            {% for doc in docs %}
+                <div class="collapse show" id="collapseElm{{loop.index}}">
+                    <div class="card card-body">
+                        <h2><a class="button btn-primary" href="{{doc[2]}}" target="_blank">{{doc[1]}}</a></h2>
+                        <p>Document Date - {{doc[5]}}</p>
+                    </div>
                 </div>
+                <br>
+            {% endfor %}
+        {% else %}
+            {% for doc in docs %}
+                <div class="collapse show" id="collapseElm{{loop.index}}">
+                    <div class="card card-body">
+                        <h2><a class="button btn-primary" href="{{doc.document_link}}" target="_blank">{{doc.document_name}}</a></h2>
+                        <p>Document Date - {{doc.document_date}}</p>
+                        <div class="table-responsive">
+                            <table class="table table-primary">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Webhook Name</th>
+                                        <th scope="col">Actions</th>
+                                        <th scope="col">Date Updated</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {%for wh in doc.webhooks%}
 
-                
-            </div>
-        </div>
-        <br>
-        {% endfor %}
+                                        <tr>
+                                            <td>
+                                                {{wh.webhook_name}}
+                                                <span id="status-{{wh.send_id}}">
+                                                {%if wh.skip == 1%}
+                                                    <span class="badge text-bg-primary">Skipped Send</span>
+                                                {%elif wh.sent == 1%}
+                                                    <span class="badge text-bg-success">Sent</span>
+                                                {%else%}
+                                                    <span class="badge text-bg-warning">Pending</span>
+                                                {%endif%}
+                                                </span> 
+                                            </td>
+                                            <td>
+                                                <button class="btn btn-primary" onclick="sendDocument({{wh.send_id}})">Send</button>
+                                                <span id="actionbutton-{{wh.send_id}}">
+                                                    {%if wh.skip == 1 or wh.sent == 1%}
+                                                        <button class="btn btn-warning" onclick="queueDocument({{wh.send_id}})">Queue</button>
+                                                    {%elif wh.skip == 0 or wh.sent == 0%}
+                                                        <button class="btn btn-danger" onclick="cancelQueueDocument({{wh.send_id}})">Cancel</button>
+                                                    {%endif%}
+                                                </span>
+                                                
+                                            </td>
+                                            <td>
+                                                <span id="sentdate-{{wh.send_id}}">{{wh.send_date}}</span>
+                                            </td>
+                                        </tr>
+                                    {%endfor%}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <br>
+            {% endfor %}
+        {%endif%}
     </div>
 </body>
 </html>
